2016-11-06  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	PR3199: Invalid nashorn URL
	* Makefile.am:
	(NASHORN_SRC_ZIP): Remove duplicate 'tar.'
	* NEWS: Updated.

2016-11-06  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	PR2445: Support system libsctp
	* Makefile.am:
	(ICEDTEA_CONFIGURE): Set --enable-system-sctp
	or --disable-system-sctp according to
	whether USE_SYSTEM_PCSC is set or not.

2015-07-07  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	PR2445: Support system libsctp
	* INSTALL:
	Document --enable-system-sctp option
	and necessary dependencies.
	* Makefile.am:
	(ICEDTEA_CONFIGURE_ENV): Add SCTP_CFLAGS
	and SCTP_LIBS to support the system SCTP
	option.
	* NEWS: Updated.
	* acinclude.m4:
	(IT_CHECK_FOR_SCTP): Add --enable-system-sctp
	option.
	* configure.ac: Invoke IT_CHECK_FOR_SCTP.

2016-11-04  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	PR3182: Support building without pre-compiled headers
	* Makefile.am:
	(ICEDTEA_CONFIGURE): Pass --disable-precompiled-headers
	or --enable-precompiled-headers, according to whether
	DISABLE_PRECOMPILED_HEADERS is defined or not,
	respectively.

2016-10-26  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	PR3182: Support building without pre-compiled headers
	* INSTALL: Updated.
	* NEWS: Updated.
	* acinclude.m4:
	(IT_DISABLE_PRECOMPILED_HEADERS): New macro to
	provide the --disable-precompiled-headers option.
	* configure.ac: Invoke IT_DISABLE_PRECOMPILED_HEADERS.

2016-11-03  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	PR3201: Update infinality configure test
	* acinclude.m4:
	(IT_ENABLE_INFINALITY): Allow Infinality to be
	enabled if TT_CONFIG_OPTION_SUBPIXEL_HINTING is
	set (FreeType >= 2.7)

2016-11-03  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	PR1978: Allow use of system PCSC
	* Makefile.am:
	(ICEDTEA_CONFIGURE): Set --enable-system-pcsc
	or --disable-system-pcsc according to
	whether USE_SYSTEM_PCSC is set or not.

2014-01-31  Andrew John Hughes  <gnu.andrew@member.fsf.org>
