@@ -1,5 +1,14 @@
 2016-11-06  Andrew John Hughes  <gnu_andrew@member.fsf.org>
 
+	PR3221: Use pkgconfig to detect Kerberos CFLAGS
+	and libraries
+	* NEWS: Updated.
+	* acinclude.m4:
+	(IT_CHECK_FOR_KERBEROS): Use PKG_CHECK_MODULES
+	rather than AC_CHECK_LIB/HEADER.
+
+2016-11-06  Andrew John Hughes  <gnu_andrew@member.fsf.org>
+
 	PR3199: Invalid nashorn URL
 	* Makefile.am:
 	(NASHORN_SRC_ZIP): Remove duplicate 'tar.'
